fix(zodiaclist): Change navbar link color to white for better visibility in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ header{
 }
 .navbar h7 a{
     text-decoration: none;
-    color: black;
+    color: rgb(255, 255, 255);
     font-size: 20px;
     font-weight: bold;
 }
